Project

General

Profile

Actions

Bug #58339

closed

crimson-osd restart fails

Added by Xuehan Xu over 1 year ago. Updated about 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

INFO  2022-12-22 16:53:24,966 [shard 0] osd -  pg_epoch 10 pg[1.6( v 9'875 (0'0,9'875] local-lis/les=5/6 n=849 ec=5/5 lis/c=5/5 les/c/f=6/6/0 sis=10) [] r=-1 lpr=10 pi=[5,10)/1 crt=9'875 lcod 0'0 mlcod 0'0 unknown start_peering_interval up {0} -> {}, acting {0} -> {}, acting_primary 0 -> -1, up_primary 0 -> -1, role 0 -> -1, features acting 4540138322906710015 upacting 4540138322906710015
INFO  2022-12-22 16:53:24,966 [shard 0] osd -  pg_epoch 10 pg[1.4( v 9'913 (0'0,9'913] local-lis/les=5/6 n=881 ec=5/5 lis/c=5/5 les/c/f=6/6/0 sis=10) [] r=-1 lpr=10 pi=[5,10)/1 crt=9'913 lcod 0'0 mlcod 0'0 unknown start_peering_interval up {0} -> {}, acting {0} -> {}, acting_primary 0 -> -1, up_primary 0 -> -1, role 0 -> -1, features acting 4540138322906710015 upacting 4540138322906710015
INFO  2022-12-22 16:53:24,966 [shard 0] osd -  pg_epoch 10 pg[1.7( v 9'857 (0'0,9'857] local-lis/les=5/6 n=837 ec=5/5 lis/c=5/5 les/c/f=6/6/0 sis=10) [] r=-1 lpr=10 pi=[5,10)/1 crt=9'857 lcod 0'0 mlcod 0'0 unknown start_peering_interval up {0} -> {}, acting {0} -> {}, acting_primary 0 -> -1, up_primary 0 -> -1, role 0 -> -1, features acting 4540138322906710015 upacting 4540138322906710015
INFO  2022-12-22 16:53:24,966 [shard 0] osd -  pg_epoch 10 pg[1.1( v 9'816 (0'0,9'816] local-lis/les=5/6 n=790 ec=5/5 lis/c=5/5 les/c/f=6/6/0 sis=10) [] r=-1 lpr=10 pi=[5,10)/1 crt=9'816 lcod 0'0 mlcod 0'0 unknown start_peering_interval up {0} -> {}, acting {0} -> {}, acting_primary 0 -> -1, up_primary 0 -> -1, role 0 -> -1, features acting 4540138322906710015 upacting 4540138322906710015
INFO  2022-12-22 16:53:24,966 [shard 0] osd -  pg_epoch 10 pg[1.0( v 9'945 (0'0,9'945] local-lis/les=5/6 n=922 ec=5/5 lis/c=5/5 les/c/f=6/6/0 sis=10) [] r=-1 lpr=10 pi=[5,10)/1 crt=9'945 lcod 0'0 mlcod 0'0 unknown start_peering_interval up {0} -> {}, acting {0} -> {}, acting_primary 0 -> -1, up_primary 0 -> -1, role 0 -> -1, features acting 4540138322906710015 upacting 4540138322906710015
ERROR 2022-12-22 16:53:24,966 [shard 0] none - ../src/crimson/osd/pg.h:418 : In function 'virtual void crimson::osd::PG::rebuild_missing_set_with_deletes(PGLog&)', ceph_assert(%s)
0 == "Impossible for crimson" 
Actions #1

Updated by Xuehan Xu over 1 year ago

  • Pull request ID set to 49540
Actions #2

Updated by Xuehan Xu about 1 year ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF