crimson/osd/pg: rebuild missing set when a new interval is created

Fixes: https://tracker.ceph.com/issues/58339
Signed-off-by: Xuehan Xu <xxhdx1985126@gmail.com>